# vega-mir

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_introduction.ipynb  02_paper_reproduction.ipynb
notebooks/_data_extraction/: build_notebook_01.py  build_notebook_02.py  extract_from_cygnus.py
notebooks/data/: README.md  composer_counts.json  composer_pieces.json  paper_reference.json
paper/: paper.bib  paper.md
src/vega_mir/: __init__.py  fractal.py  gini.py  intervals.py  kl.py  network.py  rubato.py  shannon.py  stationarity.py  zipf.py
tests/: test_fractal.py  test_gini.py  test_intervals.py  test_kl.py  test_network.py  test_rubato.py  test_shannon.py  test_smoke.py  test_stationarity.py  test_zipf.py
